--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,13 @@
 		<org.aspectj-version>1.6.10</org.aspectj-version>
 		<org.slf4j-version>1.6.6</org.slf4j-version>
 	</properties>
+	<repositories>
+		<repository>
+			<id>oracle</id>
+			<name>ORACLE JDBC Repository</name>
+			<url>http://maven.jahia.org/maven2</url>
+		</repository>
+	</repositories>
 	<dependencies>
 		<!-- Spring -->
 		<dependency>
@@ -128,7 +135,12 @@
 			<artifactId>spring-test</artifactId>
 			<version>4.2.9.RELEASE</version>
 		</dependency>
-		
+		<!-- DB -->
+		<dependency>
+			<groupId>com.oracle</groupId>
+			<artifactId>ojdbc6</artifactId>
+			<version>12.1.0.2</version>
+		</dependency>
 	</dependencies>
     <build>
         <plugins>
